<resources>
    <string name="app_name">assign9</string>
    <string name="title_summary_activity">Summary Activity</string>
    <string name="title_search_activity">Search Activity</string>
    <string name="meeting">Meeting Calendar</string>
    <string name="title">Title</string>
    <string name="place">Place</string>
    <string name="participants">Participant</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="btn_add">Add More</string>
    <string name="btn_submit">Submit (Internal)</string>
    <string name="btn_summary">Summary (Internal)</string>
    <string name="btn_search">Search (Internal)</string>
    <string name="btn_submit1">Submit (External)</string>
    <string name="btn_summary1">Summary (External)</string>
    <string name="btn_search1">Search (External)</string>
    <string name="btn_update">Update </string>
    <string name="btn_selectdate">Select Date</string>
    <string name="btn_selecttime">Select Time</string>
    <string name="btn_back">Back</string>
    <string name="error1">Missing Fields</string>
    <string name="error2">Paticipant list is empty</string>
    <string name="error3">Already in database</string>
    <string name="msg">Saved successfully</string>
    <string name="font_size">Font Size</string>
    <string name="font_color">Font Color</string>
    <string name="background_color">Background Color</string>
    <string name="gui">Change GUI styles</string>
    <string name="button">Change button styles</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="white">White</string>
    <string name="save">Save</string>
    <string name="setting1">setting1</string>
    <string name="setting_msg">Set successfully!</string>
    <string name="data">data_internal</string>
    <string name="data1">data_external</string>
    <string name="dir_name">public/data</string>
    <string name="file_not_found">File not found!</string>
    <string name="io_excp">Input Output Error !</string>
</resources>